--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="warp">
         <header>
             <nav class="top">
-                인기 영화 검색하기 페이지
+                <h1><a href="/">인기 영화 검색하기 페이지</a></h1>
             </nav>
             <form class="search" onsubmit="">
                 <input type="text" id="search-input" placeholder="영화 제목을 검색해 보세요" autoFocus />
@@ -25,6 +25,7 @@
             </form>
         </header>
         <section class="movie">
+            <!-- 영화 리스트 출력 -->
             <ul class="movie-list">
             </ul>
 
