Modify html link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="warp">
         <header>
             <nav class="top">
-                <h1><a href="/">인기 영화 검색하기 페이지</a></h1>
+                <h1><a href="#">인기 영화 검색하기 페이지</a></h1>
             </nav>
             <form class="search" onsubmit="">
                 <input type="text" id="search-input" placeholder="영화 제목을 검색해 보세요" autoFocus />
